# scripture-typer

./: main.py  pyproject.toml
