[tool.poetry]
name = "scripture-typer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scripture_typer"}]

[tool.poetry.dependencies]
python = "^3.11"
readchar = "^4.0.5"
typer = "^0.9.0"
rich = "^13.7.1"
shellingham = "^1.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
